force-app/main/default/objects/GameCharacter__c/GameCharacter__c.object-meta.xml
<CustomObject>
    <label>Game Character</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>Game Character Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Characters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>