force-app/main/default/objects/GameCharacter__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Game Characters</relationshipLabel>
    <relationshipName>GameCharacters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>