force-app/main/default/objects/GameCharacter__c/fields/ExperiencePoints__c.field-meta.xml
<CustomField>
    <fullName>ExperiencePoints__c</fullName>
    <label>Experience Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>